--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
 
   "manifest_version": 2,
-  "name": "Knowfox",
+  "name": "VoiCo",
   "version": "0.1",
 
-  "description": "Save bookmarks to Knowfox",
-  "homepage_url": "https://github.com/knowfox/firefox-extension",
+  "description": "Show a Voice Code",
+  "homepage_url": "https://github.com/oschettler/voico-extension",
 
   "icons": {
-    "48": "icons/knowfox-48.png",
-    "96": "icons/knowfox-96.png"
+    "48": "icons/voico-48.png",
+    "96": "icons/voico-96.png"
   },
 
   "permissions": [
@@ -20,8 +20,8 @@
   ],
 
   "browser_action": {
-    "default_icon": "icons/knowfox-32.png",
-    "default_title": "Knowfox!",
+    "default_icon": "icons/voico-32.png",
+    "default_title": "VoiCo!",
     "default_popup": "popup.html"
   }
 }
